src/test/ui/parser/keyword-box-as-identifier.stderr
error: expected identifier, found reserved keyword `box`
  --> $DIR/keyword-box-as-identifier.rs:4:9
   |
LL |     let box = "foo";
   |         ^^^ expected identifier, found reserved keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#box = "foo";
   |         ~~~~~

error: aborting due to previous error

